syntax = "proto3";

option go_package = "proto/vessel";

package vessel;

service VesselService {
   rpc FindAvailable(Specification) returns (Response) {}
}

message Response {
   Vessel vessel = 1;
   repeated Vessel vessels = 2;
}

// TODO(emerick): Describe this message.
message Vessel {
   string id =1;
   int32 capacity =2;
   int32 max_weight =3;
   string name =4;
   bool available =5;
   string owner_id =6;
}

// TODO(emerick): Describe this message.
message Specification {
   int32 capacity =1;
   int32 max_weight =2;
}

